--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A wrapper for the Apimo API",
   "main": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "",
+    "build": "tsc"
   },
   "author": "Vitaly Lysen",
   "license": "ISC",
