--- a/package.json
+++ b/package.json
@@ -2,15 +2,17 @@
   "name": "apimo.js",
   "version": "1.0.0",
   "description": "A wrapper for the Apimo API",
-  "main": "index.ts",
+  "main": "/dist/index.js",
   "scripts": {
     "dev": "",
-    "build": "tsc"
+    "build": "tsc",
+    "run": "node dist/index.js"
   },
   "author": "Vitaly Lysen",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.4.0"
+    "axios": "^1.4.0",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/node": "^20.3.3",
