--- a/package.json
+++ b/package.json
@@ -1,24 +1,42 @@
 {
   "name": "apimo.js",
   "version": "1.0.1",
-  "description": "A wrapper for the Apimo API",
+  "description": "A wrapper for the Apimo API with catalog caching for building custom Real Estate website using their technologies.",
   "main": "/dist/index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Neikow/apimo.js.git"
+  },
+  "homepage": "https://github.com/Neikow/apimo.js",
+  "bugs": {
+    "url": "https://github.com/Neikow/apimo.js/issues"
+  },
+  "keywords": [
+    "api",
+    "apimo",
+    "real-estate"
+  ],
   "scripts": {
     "dev": "",
     "build": "tsc",
-    "run": "node dist/index.js"
+    "run": "node dist/index.js",
+    "test": "vitest run",
+    "test-coverage": "vitest run --coverage"
   },
-  "author": "Vitaly Lysen",
-  "license": "ISC",
+  "author": "Vitaly Lysen <vitaly@lysen.dev> (https://lysen.dev)",
+  "license": "MIT",
   "dependencies": {
-    "axios": "^1.4.0",
+    "bottleneck": "^2.19.5",
+    "merge-anything": "^6.0.6",
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@types/node": "^20.3.3",
-    "@typescript-eslint/eslint-plugin": "^5.61.0",
-    "@typescript-eslint/parser": "^5.61.0",
-    "eslint": "^8.44.0",
-    "typescript": "^5.1.6"
+    "@antfu/eslint-config": "^5.0.0",
+    "@types/node": "^24.1.0",
+    "@vitest/coverage-v8": "^3.2.4",
+    "dotenv": "^17.2.1",
+    "eslint": "^9.32.0",
+    "typescript": "^5.9.2",
+    "vitest": "^3.2.4"
   }
 }
