--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -36,6 +36,8 @@ jobs:
     needs: test
     runs-on: ubuntu-latest
 
+    environment: "Deploy"
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
