--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -36,7 +36,7 @@ jobs:
     needs: test
     runs-on: ubuntu-latest
 
-    environment: "Deploy"
+    environment: Deploy
 
     steps:
       - name: Checkout code
