--- a/package.json
+++ b/package.json
@@ -1,14 +1,27 @@
 {
   "name": "apimo.js",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "A wrapper for the Apimo API with catalog caching for building custom Real Estate website using their technologies.",
-  "author": "Vitaly Lysen <vitaly@lysen.dev> (https://lysen.dev)",
-  "license": "MIT",
-  "homepage": "https://github.com/Neikow/apimo.js",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "module": "./dist/index.js",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "require": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
+  "files": [
+    "dist/**/*",
+    "README.md",
+    "LICENSE"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/Neikow/apimo.js.git"
   },
+  "homepage": "https://github.com/Neikow/apimo.js",
   "bugs": {
     "url": "https://github.com/Neikow/apimo.js/issues"
   },
@@ -17,7 +30,6 @@
     "apimo",
     "real-estate"
   ],
-  "main": "/dist/index.js",
   "scripts": {
     "dev": "",
     "build": "tsc",
@@ -26,16 +38,18 @@
     "test-coverage": "vitest run --coverage",
     "lint": "eslint ."
   },
+  "author": "Vitaly Lysen <vitaly@lysen.dev> (https://lysen.dev)",
+  "license": "MIT",
   "dependencies": {
     "bottleneck": "^2.19.5",
     "merge-anything": "^6.0.6",
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@anatine/zod-mock": "^3.14.0",
     "@antfu/eslint-config": "^5.0.0",
-    "@faker-js/faker": "^9.9.0",
     "@types/node": "^24.1.0",
+    "@anatine/zod-mock": "^3.14.0",
+    "@faker-js/faker": "^9.9.0",
     "@vitest/coverage-v8": "^3.2.4",
     "dotenv": "^17.2.1",
     "eslint": "^9.32.0",
