--- a/package.json
+++ b/package.json
@@ -2,26 +2,13 @@
   "name": "apimo.js",
   "version": "1.0.2",
   "description": "A wrapper for the Apimo API with catalog caching for building custom Real Estate website using their technologies.",
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
-  "module": "./dist/index.js",
-  "exports": {
-    ".": {
-      "import": "./dist/index.js",
-      "require": "./dist/index.js",
-      "types": "./dist/index.d.ts"
-    }
-  },
-  "files": [
-    "dist/**/*",
-    "README.md",
-    "LICENSE"
-  ],
+  "author": "Vitaly Lysen <vitaly@lysen.dev> (https://lysen.dev)",
+  "license": "MIT",
+  "homepage": "https://github.com/Neikow/apimo.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/Neikow/apimo.js.git"
   },
-  "homepage": "https://github.com/Neikow/apimo.js",
   "bugs": {
     "url": "https://github.com/Neikow/apimo.js/issues"
   },
@@ -29,6 +16,21 @@
     "api",
     "apimo",
     "real-estate"
+  ],
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js",
+      "require": "./dist/index.js"
+    }
+  },
+  "main": "./dist/index.js",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "files": [
+    "LICENSE",
+    "README.md",
+    "dist/**/*"
   ],
   "scripts": {
     "dev": "",
@@ -38,18 +40,16 @@
     "test-coverage": "vitest run --coverage",
     "lint": "eslint ."
   },
-  "author": "Vitaly Lysen <vitaly@lysen.dev> (https://lysen.dev)",
-  "license": "MIT",
   "dependencies": {
     "bottleneck": "^2.19.5",
     "merge-anything": "^6.0.6",
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^5.0.0",
-    "@types/node": "^24.1.0",
     "@anatine/zod-mock": "^3.14.0",
+    "@antfu/eslint-config": "^5.0.0",
     "@faker-js/faker": "^9.9.0",
+    "@types/node": "^24.1.0",
     "@vitest/coverage-v8": "^3.2.4",
     "dotenv": "^17.2.1",
     "eslint": "^9.32.0",
