fix transpiling destination
Took 6 minutes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,16 @@
     "strict": true,
     "declaration": true,
     "outDir": "./dist",
+    "rootDir": "./src",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true
-  }
+  },
+  "include": [
+    "src/**/*"
+  ],
+  "exclude": [
+    "**/*.test.ts",
+    "**/*.spec.ts"
+  ]
 }
